* trek() now allows users to get routes from google that aren't straight
  lines on plots. (#99, thanks stackoverflow user @akhmed) this required
  importing bitops.
* google functions have domain name extension options, urlonly options,
  and inject options for any code that you manually want to pass to the
  url (i.e. anything that isn't built into ggmap).


CHANGES

* dplyr is now listed as a dependency (for bind_cols in mutate_geocode).
* get_stamenmap() now issues a warning if a location parameter is passed
  (#55, thanks @cguwilliams).


FIXES

* get_stamenmap() now works again for terrain and terrain-background
  images (#102, thanks @UrbanDemog).
* a bug in parsing the base_layer argument is now fixed. (thanks to
  @restonslacker)
* gglocator now properly adapts to scaling. (minor update, thanks to
  @Nikolai-Hlubek)
* google functions now use enc2utf8() to better handle foreign character
  sets. (#98, #89, thanks dapper2dan)
* google functions now better handle special characters. (#104, thanks
  casa-henrym)
* gglocator now properly works again. (#87, thanks @salah31416)


ggmap 2.6.1
-------------------------------------------------------------------------

FIXES

* fixes a bug in qmplot that gives the error "Error in unlist(.all_aesthetics[1:42]) :
  object '.all_aesthetics' not found". (thanks to @Hughan.)
* gglocator now properly adapts to scaling. (thanks to @Nikolai-Hlubek)


ggmap 2.6
-------------------------------------------------------------------------

NEW FEATURES

* geocode now has a force option to override cached values. (#69, thanks
@samfield)
* get_map now accepts as its location the result of geocode (you'll still
need to specify the zoom, it doesn't do that for you).

CHANGES

* get_googlemap now properly parses the scale argument.
* geocode now (again) defaults to source = "google" due to poor experiences
with dsk.

FIXES

* non-square map-images are now parsed properly. (#17, reported by @jonnybaik,
@krmlr, @dannguyen)
