@@ -39,6 +39,12 @@
 #' mapdist(from, to, mode = "bicycling")
 #' mapdist(from, to, mode = "walking")
 #'
+#' # google requires a key for mode="transit"
+#' register_google(key = "[your key here]")
+#' from <- "city hall houston texas"
+#' to <- "nrg stadium houston texas"
+#' mapdist(from, to, mode = "transit")
+#'
 #' from <- c("houston", "houston", "dallas")
 #' to <- c("waco, texas", "san antonio", "houston")
 #' mapdist(from, to)
@@ -52,7 +58,7 @@
 #'
 #' }
 #'
-mapdist <- function(from, to, mode = c("driving","walking","bicycling"),
+mapdist <- function(from, to, mode = c("driving","walking","bicycling","transit"),
   output = c("simple","all"), messaging = FALSE,
   language = "en-EN", urlonly = FALSE, override_limit = FALSE,
   ext = "com", inject = "", ...)
